--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <h1>This is Aditya stha</h1>
+    <p>Hello everyone. Good morning</p>
 </head>
 <body>
     
